syntax = "proto3";
package proto;
option go_package = "github.com/example/mini-tiktok/proto;proto";

service SocialService {
  rpc Like(LikeRequest) returns (LikeResponse);
  rpc Unlike(LikeRequest) returns (LikeResponse);
  rpc Comment(CommentRequest) returns (CommentResponse);
  rpc ListComments(ListCommentsRequest) returns (ListCommentsResponse);
}

message LikeRequest { string user_id = 1; string video_id = 2; }
message LikeResponse { bool ok = 1; int64 like_count = 2; }
message CommentRequest { string user_id = 1; string video_id = 2; string content = 3; }
message CommentResponse { bool ok = 1; }
message Comment { string user_id = 1; string content = 2; int64 created_at = 3; }
message ListCommentsRequest { string video_id = 1; int32 page = 2; int32 page_size = 3; }
message ListCommentsResponse { repeated Comment items = 1; }
